syntax = "proto3";

package autokitteh.users.v1;

import "autokitteh/users/v1/user.proto";
import "buf/validate/validate.proto";
import "google/protobuf/field_mask.proto";

message CreateRequest {
  User user = 1 [(buf.validate.field).required = true];
}

message CreateResponse {
  string user_id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetRequest {
  // at least one of these fields must be set.
  string user_id = 1;
  string email = 2;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  User user = 1 [(buf.validate.field).required = true];
  google.protobuf.FieldMask field_mask = 2;
}

message UpdateResponse {}

message GetIDRequest {
  string email = 1 [(buf.validate.field).string.min_len = 1];
}

message GetIDResponse {
  string user_id = 1;
}

message BatchGetRequest {
  repeated string user_ids = 1 [(buf.validate.field).repeated.items.string.min_len = 1];
}

message BatchGetResponse {
  repeated User users = 1 [(buf.validate.field).repeated.items.required = true];
}

service UsersService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetID(GetIDRequest) returns (GetIDResponse);
  // BatchGet returns a list of users for the given org_ids, if the org user not exist, it will not be returned.
  rpc BatchGet(BatchGetRequest) returns (BatchGetResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
}
